# vtuber-quiz

./: Cargo.toml  README.md  config.toml  init.sql
backend/: Cargo.toml  README.md
backend/public/swagger/: index.html  openapi.yaml  swagger-initializer.js
backend/src/: bilibili.rs  config.rs  db.rs  error.rs  hcaptcha.rs  main.rs  models.rs  services.rs
backend/src/services/: mod.rs  question.rs  user.rs
bilibili/: Cargo.toml
commons/: Cargo.toml
commons/src/: lib.rs  models.rs
frontend/: Cargo.toml  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  main.rs
frontend/src/components/: Captcha.tsx  LoginForm.tsx  Nav.tsx  input.rs  mod.rs  nav.rs
frontend/src/pages/: Login.tsx  home.rs  mod.rs  not_found.rs
frontend/src/pages/accounts/: login.rs  mod.rs  register.rs
migrations/: 20210527065829_type_def.sql  20210527065904_user_info.sql  20210527065929_question_info.sql  20210529055240_session.sql
src/: config.rs  hcaptcha.rs  main.rs  services.rs
