[package]
name = "vtuber-quiz-backend"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[features]
bypass-hcaptcha = []

[dependencies]
actix-http = "3.0.0-beta.6"
actix-session = { git = "https://github.com/nhruo123/actix-extras.git", branch = "beta-6-patch" }
actix-web = { version = "4.0.0-beta.6", features = [ "secure-cookies" ] }
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = [ "serde" ] }
dotenv = "0.15"
hcaptcha = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = [ "json" ] }
rust-argon2 = "0.8"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }
thiserror = "1.0"
toml = "0.5"
vtuber-quiz-commons = { path = "../commons", features = [ "backend" ] }

[dev-dependencies]
tokio = { version = "1.6", features = [ "rt", "macros" ] }